Split verifier from supporting code

--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -900,6 +900,11 @@ module = {
 };
 
 module = {
+  name = verifier;
+  common = io/verifier.c;
+};
+
+module = {
   name = hdparm;
   common = commands/hdparm.c;
   common = lib/hexdump.c;
