strtoull: Fix behaviour on chars between '9' and 'a'.
Reported by: Aaron Miller <aaronmiller@fb.com>

--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -1959,6 +1959,11 @@ module = {
 };
 
 module = {
+  name = strtoull_test;
+  common = tests/strtoull_test.c;
+};
+
+module = {
   name = setjmp_test;
   common = tests/setjmp_test.c;
 };
